# client

./: .gitignore  CI.md  Cargo.toml  WINDOWS.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/kubemaxx/st/: AndroidAudioPlayer.kt  ApiDiscovery.kt  AvcSurfaceDecoder.kt  CursorOverlayView.kt  LatestAsyncTask.kt  MainActivity.kt  NativeBridge.kt  RemoteKeyboard.kt  ServerList.kt  TokenStore.kt  TrackpadDragGesture.kt  TrackpadScroll.kt
android/app/src/test/java/io/kubemaxx/st/: ConnectionStatusTest.kt  CooperativeInputTest.kt  MediaBufferingTest.kt  RemoteKeyboardTest.kt  ResourceLifecycleTest.kt  ServerListTest.kt  StreamStabilityTest.kt  TokenStoreTest.kt  TrackpadDragGestureTest.kt  TrackpadScrollTest.kt
android/rust/: Cargo.toml
android/rust/src/: lib.rs
core/: Cargo.toml
core/src/: api_tunnel.rs  client.rs  control_stream.rs  discovery.rs  lib.rs  media.rs
scripts/: build-windows-msvc.ps1  package-macos-app.sh  package-unix.sh  package-windows-release.ps1
src/: api_client.rs  audio.rs  debug_state.rs  decode.rs  display.rs  graph_overlay.rs  input.rs  keep_awake.rs  linux_uring.rs  main.rs  pipeline.rs  render.rs  render_gl.rs  render_macos.rs  render_macos_metal.rs  render_wgpu.rs  render_wgpu_linux_dmabuf.rs  render_windows.rs  render_windows_native.rs  transport.rs  updater.rs  video_frame.rs
