[package]
name = "st-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
st-protocol = { path = "protocol" }
ffmpeg-next = { version = "8.1", default-features = false, features = ["codec", "format", "software-scaling"] }
crossbeam-channel = "0.5"
cpal = "0.15"
opus = "0.3"
khronos-egl = { version = "6", features = ["dynamic"] }
libc = "0.2"
flate2 = "1"
self-replace = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
ureq = { version = "2", default-features = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics-types = "0.2"
metal = "0.32"
objc = "0.2"
raw-window-handle = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Power", "Win32_System_Threading"] }
