[package]
name = "st-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
st-protocol = { path = "protocol", features = ["tunnel"] }
st-client-core = { path = "core" }
ffmpeg-next = { version = "8.1", default-features = false, features = ["codec", "format", "software-scaling"] }
crossbeam-channel = "0.5"
dirs = "5"
sha2 = "0.10"
cpal = "0.15"
opus = "0.3"
arboard = "3"
khronos-egl = { version = "6", features = ["dynamic"] }
libc = "0.2"
flate2 = "1"
self-replace = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tar = "0.4"
tempfile = "3"
ureq = { version = "2", default-features = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
pollster = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
# Pin bitflags: 2.12.0 added a `#[flag_name]` attribute, so the bitflags! macro
# now scans every flag's attributes. dispatch2 0.3.x's `dispatch_block_flags_t`
# carries giant per-flag doc comments, and that scan recurses past the default
# recursion_limit=128, breaking macOS builds (`recursion limit reached while
# expanding $crate::__bitflags_flag_name!`). 2.11.0 is the last good version and
# satisfies ffmpeg-next's ^2.11, so it unifies the whole tree. Remove once a fixed
# bitflags ships or dispatch2 raises its own recursion_limit.
bitflags = "=2.11.0"
core-foundation = "0.10"
core-graphics-types = "0.2"
metal = "0.32"
objc = "0.2"
raw-window-handle = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.14"
io-uring = "0.7"
ash = "0.38"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Power", "Win32_System_Threading", "Win32_UI_Shell"] }
