[package]
name = "st-client-core"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
rand = "0.8"
serde_json = "1"
st-protocol = { path = "../protocol", features = ["tunnel"] }
ureq = { version = "2", default-features = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
